--- a/LMS/templates/LMSteacherdashboard/profile.html
+++ b/LMS/templates/LMSteacherdashboard/profile.html
@@ -37,7 +37,7 @@
                     <li class="nav-item"><a class="nav-link active" href="{% url 'profile' %}"><i class="fas fa-user"></i><span>Profile</span></a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'tts' %}"><i class="fas fa-table"></i><span>Time Tables</span></a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'attendance' %}"><i class="fas fa-window-maximize"></i><span>Attendance</span></a></li>
-                    <li class="nav-item"><a class="nav-link" href="subcontrol.html"><i class="fa fa-book"></i><span>Subject control</span></a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'subjectcontrol' %}"><i class="fa fa-book"></i><span>Subject control</span></a></li>
                 </ul>
                 <div class="text-center d-none d-md-inline"><button class="btn rounded-circle border-0" id="sidebarToggle" type="button"></button></div>
             </div>
