--- a/LMS/templates/LMSstudentdashboard/submitassignments.html
+++ b/LMS/templates/LMSstudentdashboard/submitassignments.html
@@ -6,21 +6,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Blank Page - Brand</title>
-    <link rel="stylesheet" href="{% static 'LMSteacherdashboard/assets/bootstrap/css/bootstrap.min.css'%}">
+    <link rel="stylesheet" href="{% static 'LMSstudentdashboard/assets/bootstrap/css/bootstrap.min.css'%}">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i">
-    <link rel="stylesheet" href="{% static 'LMSteacherdashboard/assets/fonts/fontawesome-all.min.css'%}">
-    <link rel="stylesheet" href="{% static 'LMSteacherdashboard/assets/fonts/font-awesome.min.css'%}">
-    <link rel="stylesheet" href="{% static 'LMSteacherdashboard/assets/fonts/fontawesome5-overrides.min.css'%}">
-    <link rel="stylesheet" href="{% static 'LMSteacherdashboard/assets/css/Button-modal-ecommerce-1.css'%}">
-    <link rel="stylesheet" href="{% static 'LMSteacherdashboard/assets/css/Button-modal-ecommerce.css'%}">
-    <link rel="stylesheet" href="{% static 'LMSteacherdashboard/assets/css/Continue-Button.css'%}">
-    <link rel="stylesheet" href="{% static 'LMSteacherdashboard/assets/css/Drag-and-Drop-File-Input.css'%}">
-    <link rel="stylesheet" href="{% static 'LMSteacherdashboard/assets/css/Drag-Drop-File-Input-Upload.css'%}">
-    <link rel="stylesheet" href="{% static 'LMSteacherdashboard/assets/css/Forum---Thread-listing-1.css'%}">
-    <link rel="stylesheet" href="{% static 'LMSteacherdashboard/assets/css/Forum---Thread-listing.css'%}">
+    <link rel="stylesheet" href="{% static 'LMSstudentdashboard/assets/fonts/fontawesome-all.min.css'%}">
+    <link rel="stylesheet" href="{% static 'LMSstudentdashboard/assets/fonts/font-awesome.min.css'%}">
+    <link rel="stylesheet" href="{% static 'LMSstudentdashboard/assets/fonts/fontawesome5-overrides.min.css'%}">
+    <link rel="stylesheet" href="{% static 'LMSstudentdashboard/assets/css/circle-progress-bar.css'%}">
+    <link rel="stylesheet" href="{% static 'LMSstudentdashboard/assets/css/divider-text-middle.css'%}">
+    <link rel="stylesheet" href="{% static 'LMSstudentdashboard/assets/css/Drag-and-Drop-Multiple-File-Form-Input-upload-Advanced.css'%}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-    <link rel="stylesheet" href="{% static 'LMSteacherdashboard/assets/css/Multi-step-form.css'%}">
-    <link rel="stylesheet" href="{% static 'LMSteacherdashboard/assets/css/Pretty-Login-Form.css'%}">
+    <link rel="stylesheet" href="{% static 'LMSstudentdashboard/assets/css/Multi-step-form.css'%}">
 </head>
 
 <body id="page-top">
@@ -76,7 +71,7 @@
                                 <div class="nav-item dropdown no-arrow"><a class="dropdown-toggle nav-link" aria-expanded="false" data-toggle="dropdown" href="#"><span class="badge badge-danger badge-counter">7</span><i class="fas fa-envelope fa-fw"></i></a>
                                     <div class="dropdown-menu dropdown-menu-right dropdown-list animated--grow-in">
                                         <h6 class="dropdown-header">alerts center</h6><a class="dropdown-item d-flex align-items-center" href="#">
-                                            <div class="dropdown-list-image mr-3"><img class="rounded-circle" src="{% static 'LMSteacherdashboard/assets/img/avatars/avatar4.jpeg'%}">
+                                            <div class="dropdown-list-image mr-3"><img class="rounded-circle" src="{% static 'LMSstudentdashboard/assets/img/avatars/avatar4.jpeg'%}">
                                                 <div class="bg-success status-indicator"></div>
                                             </div>
                                             <div class="font-weight-bold">
@@ -84,7 +79,7 @@
                                                 <p class="small text-gray-500 mb-0">Emily Fowler - 58m</p>
                                             </div>
                                         </a><a class="dropdown-item d-flex align-items-center" href="#">
-                                            <div class="dropdown-list-image mr-3"><img class="rounded-circle" src="{% static 'LMSteacherdashboard/assets/img/avatars/avatar2.jpeg'%}">
+                                            <div class="dropdown-list-image mr-3"><img class="rounded-circle" src="{% static 'LMSstudentdashboard/assets/img/avatars/avatar2.jpeg'%}">
                                                 <div class="status-indicator"></div>
                                             </div>
                                             <div class="font-weight-bold">
@@ -92,7 +87,7 @@
                                                 <p class="small text-gray-500 mb-0">Jae Chun - 1d</p>
                                             </div>
                                         </a><a class="dropdown-item d-flex align-items-center" href="#">
-                                            <div class="dropdown-list-image mr-3"><img class="rounded-circle" src="{% static 'LMSteacherdashboard/assets/img/avatars/avatar3.jpeg'%}">
+                                            <div class="dropdown-list-image mr-3"><img class="rounded-circle" src="{% static 'LMSstudentdashboard/assets/img/avatars/avatar3.jpeg'%}">
                                                 <div class="bg-warning status-indicator"></div>
                                             </div>
                                             <div class="font-weight-bold">
@@ -100,7 +95,7 @@
                                                 <p class="small text-gray-500 mb-0">Morgan Alvarez - 2d</p>
                                             </div>
                                         </a><a class="dropdown-item d-flex align-items-center" href="#">
-                                            <div class="dropdown-list-image mr-3"><img class="rounded-circle" src="{% static 'LMSteacherdashboard/assets/img/avatars/avatar5.jpeg'%}">
+                                            <div class="dropdown-list-image mr-3"><img class="rounded-circle" src="{% static 'LMSstudentdashboard/assets/img/avatars/avatar5.jpeg'%}">
                                                 <div class="bg-success status-indicator"></div>
                                             </div>
                                             <div class="font-weight-bold">
@@ -114,12 +109,7 @@
                             </li>
                             <div class="d-none d-sm-block topbar-divider"></div>
                             <li class="nav-item dropdown no-arrow">
-                                <div class="nav-item dropdown no-arrow"><a class="dropdown-toggle nav-link" aria-expanded="false" data-toggle="dropdown" href="#"><span class="d-none d-lg-inline mr-2 text-gray-600 small">{{user.username}}</span>
-                                    {%if user.profile.profilepic %}
-                                    <img class="border rounded-circle img-profile" src="{{user.profile.profilepic.url}}"></a>
-                                    {% else %}
-                                    <img class="border rounded-circle img-profile" src="https://www.clipartmax.com/png/middle/171-1717870_stockvader-predicted-cron-for-may-user-profile-icon-png.png"></a>
-                                    {% endif %}
+                                <div class="nav-item dropdown no-arrow"><a class="dropdown-toggle nav-link" aria-expanded="false" data-toggle="dropdown" href="#"><span class="d-none d-lg-inline mr-2 text-gray-600 small">Valerie Luna</span><img class="border rounded-circle img-profile" src="{% static 'LMSstudentdashboard/assets/img/avatars/avatar1.jpeg'%}"></a>
                                     <div class="dropdown-menu shadow dropdown-menu-right animated--grow-in"><a class="dropdown-item" href="#"><i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>&nbsp;Profile</a><a class="dropdown-item" href="#"><i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>&nbsp;Settings</a><a class="dropdown-item" href="#"><i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>&nbsp;Activity log</a>
                                         <div class="dropdown-divider"></div><a class="dropdown-item" href="#"><i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>&nbsp;Logout</a>
                                     </div>
@@ -129,28 +119,42 @@
                     </div>
                 </nav>
                 <div class="container-fluid">
-                    <h3 class="text-dark mb-1">add new file&nbsp;</h3>
+                    <h3 class="text-dark mb-1">submit assignment</h3>
                 </div>
             </div>
         </div><a class="border rounded d-inline scroll-to-top" href="#page-top"><i class="fas fa-angle-up"></i></a>
     </div>
-    <form action="" method="post" enctype="multipart/form-data">{% csrf_token %}
     <div class="container"><small class="form-text text-muted" style="font-size: 32.8px;text-align: center;margin-bottom: 31px;">drag and drop the file which you want to add</small></div>
+    <div class="container"></div>
     <div class="container">
-        <input type="text" name="subject_filename" placeholder="filename"><br><br>
-        <div class="form-group files color"><input type="file" name="subject_file"></div>
+        <div class="form-group files color">
+            <div class="m-5">
+                <div id="backdrop" class="backdrop backdrop-transition backdrop-dark">
+                    <div class="text-center w-100" style="position: absolute;top: 50%;">
+                        <div class="bg-light border rounded border-success shadow-lg m-auto" style="width: 150px;height: 150px;"><i class="fa fa-upload d-block p-4" style="font-size: 50px;"></i><span>Drop file to attach</span></div>
+                    </div>
+                </div>
+                <div class="jumbotron pt-1">
+                    <div class="alert alert-success invisible mt-5" role="alert"><span id="notify"></span></div>
+                    <h1>File Drop<br></h1>
+                    <p><label for="form-files"><a class="btn btn-secondary btn-sm" role="button">Choose Files</a></label>&nbsp;or drag the files to anywhere on this page.<br></p>
+                    <p id="filecount"><br></p>
+                    <div id="list"></div>
+                    <form method="post"><input class="form-control-file invisible" type="file" id="form-files" name="files" multiple=""><button class="btn btn-outline-primary btn-block" type="submit">Submit</button><button class="btn btn-danger mt-5" type="reset" onclick="clearFiles()">Reset</button></form>
+                </div>
+                <div class="text-center bg-light border rounded border-dark shadow-lg p-3"><img id="image_preview" width="100">
+                    <div><button class="btn btn-warning btn-sm m-3" onclick="previewClose()">Close</button></div>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="container d-xl-flex justify-content-xl-end"><button type="submit" class="btn btn-warning btn-icon-split" role="button"><span class="text-white-50 icon"><i class="fas fa-plus"></i></span><span class="text-white text">add this file</span></button></div>
-    </form>
-
-        <script src="{% static 'LMSteacherdashboard/assets/js/jquery.min.js'%}"></script>
-    <script src="{% static 'LMSteacherdashboard/assets/bootstrap/js/bootstrap.min.js'%}"></script>
-    <script src="{% static 'LMSteacherdashboard/assets/js/bs-init.js'%}"></script>
-    <script src="{% static 'LMSteacherdashboard/assets/js/Button-modal-ecommerce.js'%}"></script>
-    <script src="{% static 'LMSteacherdashboard/assets/js/Drag-and-Drop-File-Input.js'%}"></script>
+    <script src="{% static 'LMSstudentdashboard/assets/js/jquery.min.js'%}"></script>
+    <script src="{% static 'LMSstudentdashboard/assets/bootstrap/js/bootstrap.min.js'%}"></script>
+    <script src="{% static 'LMSstudentdashboard/assets/js/bs-init.js'%}"></script>
+    <script src="{% static 'LMSstudentdashboard/assets/js/Drag-and-Drop-Multiple-File-Form-Input-upload-Advanced.js'%}"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.js"></script>
-    <script src="{% static 'LMSteacherdashboard/assets/js/Multi-step-form.js'%}"></script>
-    <script src="{% static 'LMSteacherdashboard/assets/js/theme.js'%}"></script>
+    <script src="{% static 'LMSstudentdashboard/assets/js/Multi-step-form.js'%}"></script>
+    <script src="{% static 'LMSstudentdashboard/assets/js/theme.js'%}"></script>
 </body>
 
 </html>
