--- a/LMS/templates/LMSstudentdashboard/timetable.html
+++ b/LMS/templates/LMSstudentdashboard/timetable.html
@@ -1,30 +1,39 @@
-{% load static %}
 <!DOCTYPE html>
 <html>
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Blank Page - Brand</title>
-    <link rel="stylesheet" href="{% static 'LMSteacherdashboard/assets/bootstrap/css/bootstrap.min.css'%}">
+    <title>Table - Brand</title>
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i">
-    <link rel="stylesheet" href="{% static 'LMSteacherdashboard/assets/fonts/fontawesome-all.min.css'%}">
-    <link rel="stylesheet" href="{% static 'LMSteacherdashboard/assets/fonts/font-awesome.min.css'%}">
-    <link rel="stylesheet" href="{% static 'LMSteacherdashboard/assets/fonts/fontawesome5-overrides.min.css'%}">
-    <link rel="stylesheet" href="{% static 'LMSteacherdashboard/assets/css/Button-modal-ecommerce-1.css'%}">
-    <link rel="stylesheet" href="{% static 'LMSteacherdashboard/assets/css/Button-modal-ecommerce.css'%}">
-    <link rel="stylesheet" href="{% static 'LMSteacherdashboard/assets/css/Continue-Button.css'%}">
-    <link rel="stylesheet" href="{% static 'LMSteacherdashboard/assets/css/Drag-and-Drop-File-Input.css'%}">
-    <link rel="stylesheet" href="{% static 'LMSteacherdashboard/assets/css/Drag-Drop-File-Input-Upload.css'%}">
-    <link rel="stylesheet" href="{% static 'LMSteacherdashboard/assets/css/Forum---Thread-listing-1.css'%}">
-    <link rel="stylesheet" href="{% static 'LMSteacherdashboard/assets/css/Forum---Thread-listing.css'%}">
+    <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
+    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css">
+    <link rel="stylesheet" href="assets/css/circle-progress-bar.css">
+    <link rel="stylesheet" href="assets/css/divider-text-middle.css">
+    <link rel="stylesheet" href="assets/css/Drag-and-Drop-Multiple-File-Form-Input-upload-Advanced.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-    <link rel="stylesheet" href="{% static 'LMSteacherdashboard/assets/css/Multi-step-form.css'%}">
-    <link rel="stylesheet" href="{% static 'LMSteacherdashboard/assets/css/Pretty-Login-Form.css'%}">
+    <link rel="stylesheet" href="assets/css/Multi-step-form.css">
 </head>
 
 <body id="page-top">
     <div id="wrapper">
+        <nav class="navbar navbar-dark align-items-start sidebar sidebar-dark accordion bg-gradient-primary p-0">
+            <div class="container-fluid d-flex flex-column p-0"><img class="pulse animated infinite" src="assets/img/looogo.png" style="width: 90px;margin-top: 12px;"><a class="navbar-brand d-flex justify-content-center align-items-center sidebar-brand m-0" href="#">
+                    <div class="sidebar-brand-icon rotate-n-15"></div>
+                    <div class="sidebar-brand-text mx-3"><span>the lms</span></div>
+                </a>
+                <hr class="sidebar-divider my-0">
+                <ul class="navbar-nav text-light" id="accordionSidebar">
+                    <li class="nav-item"><a class="nav-link" href="dashboard.html"><i class="fas fa-tachometer-alt"></i><span>Dashboard</span></a></li>
+                    <li class="nav-item"><a class="nav-link" href="profile.html"><i class="fas fa-user"></i><span>Profile</span></a></li>
+                    <li class="nav-item"><a class="nav-link active" href="timetable.html"><i class="fas fa-table"></i><span>Timetables</span></a></li>
+                    <li class="nav-item"><a class="nav-link" href="Attendance.html"><i class="fa fa-align-left"></i><span>Attendance</span></a></li>
+                </ul>
+                <div class="text-center d-none d-md-inline"><button class="btn rounded-circle border-0" id="sidebarToggle" type="button"></button></div>
+            </div>
+        </nav>
         <div class="d-flex flex-column" id="content-wrapper">
             <div id="content">
                 <nav class="navbar navbar-light navbar-expand bg-white shadow mb-4 topbar static-top">
@@ -76,7 +85,7 @@
                                 <div class="nav-item dropdown no-arrow"><a class="dropdown-toggle nav-link" aria-expanded="false" data-toggle="dropdown" href="#"><span class="badge badge-danger badge-counter">7</span><i class="fas fa-envelope fa-fw"></i></a>
                                     <div class="dropdown-menu dropdown-menu-right dropdown-list animated--grow-in">
                                         <h6 class="dropdown-header">alerts center</h6><a class="dropdown-item d-flex align-items-center" href="#">
-                                            <div class="dropdown-list-image mr-3"><img class="rounded-circle" src="{% static 'LMSteacherdashboard/assets/img/avatars/avatar4.jpeg'%}">
+                                            <div class="dropdown-list-image mr-3"><img class="rounded-circle" src="assets/img/avatars/avatar4.jpeg">
                                                 <div class="bg-success status-indicator"></div>
                                             </div>
                                             <div class="font-weight-bold">
@@ -84,7 +93,7 @@
                                                 <p class="small text-gray-500 mb-0">Emily Fowler - 58m</p>
                                             </div>
                                         </a><a class="dropdown-item d-flex align-items-center" href="#">
-                                            <div class="dropdown-list-image mr-3"><img class="rounded-circle" src="{% static 'LMSteacherdashboard/assets/img/avatars/avatar2.jpeg'%}">
+                                            <div class="dropdown-list-image mr-3"><img class="rounded-circle" src="assets/img/avatars/avatar2.jpeg">
                                                 <div class="status-indicator"></div>
                                             </div>
                                             <div class="font-weight-bold">
@@ -92,7 +101,7 @@
                                                 <p class="small text-gray-500 mb-0">Jae Chun - 1d</p>
                                             </div>
                                         </a><a class="dropdown-item d-flex align-items-center" href="#">
-                                            <div class="dropdown-list-image mr-3"><img class="rounded-circle" src="{% static 'LMSteacherdashboard/assets/img/avatars/avatar3.jpeg'%}">
+                                            <div class="dropdown-list-image mr-3"><img class="rounded-circle" src="assets/img/avatars/avatar3.jpeg">
                                                 <div class="bg-warning status-indicator"></div>
                                             </div>
                                             <div class="font-weight-bold">
@@ -100,7 +109,7 @@
                                                 <p class="small text-gray-500 mb-0">Morgan Alvarez - 2d</p>
                                             </div>
                                         </a><a class="dropdown-item d-flex align-items-center" href="#">
-                                            <div class="dropdown-list-image mr-3"><img class="rounded-circle" src="{% static 'LMSteacherdashboard/assets/img/avatars/avatar5.jpeg'%}">
+                                            <div class="dropdown-list-image mr-3"><img class="rounded-circle" src="assets/img/avatars/avatar5.jpeg">
                                                 <div class="bg-success status-indicator"></div>
                                             </div>
                                             <div class="font-weight-bold">
@@ -114,12 +123,7 @@
                             </li>
                             <div class="d-none d-sm-block topbar-divider"></div>
                             <li class="nav-item dropdown no-arrow">
-                                <div class="nav-item dropdown no-arrow"><a class="dropdown-toggle nav-link" aria-expanded="false" data-toggle="dropdown" href="#"><span class="d-none d-lg-inline mr-2 text-gray-600 small">{{user.username}}</span>
-                                    {%if user.profile.profilepic %}
-                                    <img class="border rounded-circle img-profile" src="{{user.profile.profilepic.url}}"></a>
-                                    {% else %}
-                                    <img class="border rounded-circle img-profile" src="https://www.clipartmax.com/png/middle/171-1717870_stockvader-predicted-cron-for-may-user-profile-icon-png.png"></a>
-                                    {% endif %}
+                                <div class="nav-item dropdown no-arrow"><a class="dropdown-toggle nav-link" aria-expanded="false" data-toggle="dropdown" href="#"><span class="d-none d-lg-inline mr-2 text-gray-600 small">Valerie Luna</span><img class="border rounded-circle img-profile" src="assets/img/avatars/avatar1.jpeg"></a>
                                     <div class="dropdown-menu shadow dropdown-menu-right animated--grow-in"><a class="dropdown-item" href="#"><i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>&nbsp;Profile</a><a class="dropdown-item" href="#"><i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>&nbsp;Settings</a><a class="dropdown-item" href="#"><i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>&nbsp;Activity log</a>
                                         <div class="dropdown-divider"></div><a class="dropdown-item" href="#"><i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>&nbsp;Logout</a>
                                     </div>
@@ -129,28 +133,41 @@
                     </div>
                 </nav>
                 <div class="container-fluid">
-                    <h3 class="text-dark mb-1">add new file&nbsp;</h3>
+                    <h3 class="text-dark mb-4">Time Tables</h3>
+                    <div class="card shadow">
+                        <div class="card-header py-3">
+                            <p class="text-primary m-0 font-weight-bold">Select year</p>
+                        </div>
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="col-md-6 text-nowrap">
+                                    <div id="dataTable_length" class="dataTables_length" aria-controls="dataTable"><label>Show&nbsp;<select class="form-control form-control-sm custom-select custom-select-sm">
+                                                <option value="B.TECH I YEAR" selected="">B.TECH I YEAR</option>
+                                                <option value="B.TECH II YEAR">B.TECH II YEAR</option>
+                                                <option value="B.TECH III YEAR">B.TECH III YEAR</option>
+                                                <option value="B.TECH IV YEAR">B.TECH IV YEAR</option>
+                                            </select>&nbsp;</label></div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="text-md-right dataTables_filter" id="dataTable_filter"><button class="btn btn-primary active btn-sm text-truncate shadow-none float-right tenant-continue-btn" data-bss-hover-animate="pulse" type="button">FETCH&nbsp; &nbsp;<i class="fas fa-greater-than continue-icon"></i></button><label></label></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="container-fluid d-inline float-none">
+                    <div class="col-sm-4 col-xs-6 col-md-3 col-lg-3"><a class="text-right thumbnail" href="time table III year.jpg" target="_blank"><img class="img-responsive" src="assets/img/photo_2021-03-31_20-06-27.jpg"><small class="text-muted">View timetable</small></a></div>
                 </div>
             </div>
         </div><a class="border rounded d-inline scroll-to-top" href="#page-top"><i class="fas fa-angle-up"></i></a>
     </div>
-    <form action="" method="post" enctype="multipart/form-data">{% csrf_token %}
-    <div class="container"><small class="form-text text-muted" style="font-size: 32.8px;text-align: center;margin-bottom: 31px;">drag and drop the file which you want to add</small></div>
-    <div class="container">
-        <input type="text" name="subject_filename" placeholder="filename"><br><br>
-        <div class="form-group files color"><input type="file" name="subject_file"></div>
-    </div>
-    <div class="container d-xl-flex justify-content-xl-end"><button type="submit" class="btn btn-warning btn-icon-split" role="button"><span class="text-white-50 icon"><i class="fas fa-plus"></i></span><span class="text-white text">add this file</span></button></div>
-    </form>
-
-        <script src="{% static 'LMSteacherdashboard/assets/js/jquery.min.js'%}"></script>
-    <script src="{% static 'LMSteacherdashboard/assets/bootstrap/js/bootstrap.min.js'%}"></script>
-    <script src="{% static 'LMSteacherdashboard/assets/js/bs-init.js'%}"></script>
-    <script src="{% static 'LMSteacherdashboard/assets/js/Button-modal-ecommerce.js'%}"></script>
-    <script src="{% static 'LMSteacherdashboard/assets/js/Drag-and-Drop-File-Input.js'%}"></script>
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/js/bs-init.js"></script>
+    <script src="assets/js/Drag-and-Drop-Multiple-File-Form-Input-upload-Advanced.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.js"></script>
-    <script src="{% static 'LMSteacherdashboard/assets/js/Multi-step-form.js'%}"></script>
-    <script src="{% static 'LMSteacherdashboard/assets/js/theme.js'%}"></script>
+    <script src="assets/js/Multi-step-form.js"></script>
+    <script src="assets/js/theme.js"></script>
 </body>
 
 </html>
